Add HATEOAS support through model assemblers for Carrito, Categoria, DetalleVenta, Inventario, Producto, Usuario, and Venta